<resources>
    <string name="app_name">PlayGreen</string>
    <string name="crash_toast_text">crash 발생</string>
    <string name="crash_dialog_title">Crash</string>
    <string name="crash_dialog_text">에러로그 전송</string>
    <string name="crash_dialog_ok_toast">빠른수정하겠습니다.</string>
    <string name="str_toast_permission_denied">해당 권한을 거부하였습니다</string>
    <string name="str_permission_message_camera">해당 기능을 사용하기 위해 카메라, 저장공간 권한이 필요합니다. 설정화면에서 권한을 변경해 주세요</string>
    <string name="str_permission_message_contact">해당 기능을 사용하기 위해 주소록 읽기 권한이 필요합니다. 설정화면에서 권한을 변경해 주세요</string>
    <string name="str_permission_message_custom_camera">해당 기능을 사용하기 위해 카메라, 저장공간, 오디오녹음 권한이 필요합니다. 설정화면에서 권한을 변경해 주세요</string>
    <string name="str_empty_message_default">해당 리스트가 존재하지 않습니다</string>
    <string name="str_confirm">확인</string>
    <string name="str_cancel">취소</string>
    <string name="str_close">닫기</string>
    <string name="str_next">다음</string>
    <string name="str_take_picture_from_camera">사진촬영</string>
    <string name="str_take_picture_from_gallery">사진 앨범에서 선택</string>
    <string name="str_delete_profile_image">프로필 사진 삭제</string>
    <string name="str_new_version_message">새로운 버전이 있습니다.\n업데이트 하시겠습니까?</string>
    <string name="str_complete">완료</string>
    <string name="str_splash_text">지구를 위한 놀이</string>
    <string name="str_presented_by">PRESENTED BY</string>
    <string name="str_intro_subtitle_01">플레이그린은 그린라이프도\n즐거운 놀이가 될 수 있다는 생각!</string>
    <string name="str_intro_button_text">PLAYGREEN 시작하기</string>
    <string name="str_login_text">전세계의 PlayGreener들과 함께\n지구를 위한 놀이를 즐기세요</string>
    <string name="str_login_to_facebook">페이스북으로 시작하기</string>
    <string name="str_login_to_instagram">인스타그램으로 시작하기</string>
    <string name="str_login_to_kakaotalk">카카오톡으로 시작하기</string>
    <string name="str_login_to_email">이메일로 시작하기</string>
    <string name="str_title_email_login">이메일 로그인</string>
    <string name="str_id">아이디</string>
    <string name="str_password">비밀번호</string>
    <string name="str_password_min8">비밀번호(8자 이상 입력하세요)</string>
    <string name="str_input_introduce">소개글을 입력하세요.</string>
    <string name="str_user_name">사용자 이름</string>
    <string name="str_login">로그인</string>
    <string name="str_find_password">비밀번호 찾기</string>
    <string name="str_join_text">플레이그린이 처음이신가요?</string>
    <string name="str_join">회원가입</string>
    <string name="str_email">이메일</string>
    <string name="str_pin_code">인증코드</string>
    <string name="str_email_certification_description">이메일을 입력해 주세요. 이메일 인증 후 회원가입 하실 수\n있습니다.</string>
    <string name="str_email_certification_code_description">%s으로 전송된 인증 코드를\n입력하세요.</string>
    <string name="str_find_password_description">가입하신 이메일 주소를 입력해주세요. 해당 이메일로 비밀번호 재설정 링크를 보내드립니다.</string>
    <string name="str_resend_code">코드 재전송</string>
    <string name="str_title_email_certification">이메일 인증</string>
    <string name="str_title_find_password">비밀번호 찾기</string>
    <string name="str_title_input_certification">인증코드 입력</string>
    <string name="str_title_input_user_info">계정 정보 입력</string>
    <string name="str_toast_input_email">이메일을 입력해 주세요</string>
    <string name="str_toast_invalid_email_form">이메일 형식을 알맞게 입력해주세요</string>
    <string name="str_toast_send_email">%s로 비밀번호 재설정 링크를 전송하였습니다</string>
    <string name="str_toast_resend_authcode">%s로 인증코드를 전송하였습니다</string>
    <string name="str_toast_auth_code_not_matched">인증코드가 올바르지 않습니다</string>
    <string name="str_toast_email_addr_duplicated">이미 존재하는 이메일입니다</string>
    <string name="str_toast_network_error">네트워크 오류가 발생하였습니다. 잠시후에 다시 시도해주세요</string>
    <string name="str_toast_login_email_error">이메일 정보가 없습니다.</string>
    <string name="str_toast_login_pw_error">암호가 일치하지 않습니다.</string>
    <string name="str_toast_login_already_drop_out_error">탈퇴한 회원입니다.</string>
    <string name="str_toast_login_not_have_right_error">조회 권한이 없습니다.</string>
    <string name="str_toast_login_expire_token_error">다시 로그인해주세요. 인증 기간이 만료되었습니다.</string>
    <string name="str_toast_login_not_exist_member">입력하신 이메일로 등록된 회원정보를 찾을 수 없습니다.</string>
    <string name="str_toast_send_password_resetting_link">입력하신 이메일로 비밀번호 재설정 링크가 전송되었습니다.</string>
    <string name="str_toast_change_password_at_mypage">임시 발급된 비밀번호는 마이페이지에서 변경하세요.</string>
    <string name="str_toast_change_password">안전한 개인정보 보호를 위해 비밀번호를 변경해 주세요.</string>
    <string name="str_toast_login_not_matched_password_wait_30min">비밀번호 5회 오류로 인해 30분간 로그인이 제한됩니다.</string>
    <string name="str_toast_today_mission_already_regist">금일 미션에 이미 참여했습니다.</string>
    <string name="str_title_add_friend">친구추가</string>
    <string name="str_skip">SKIP</string>
    <string name="str_recommend_friend">추천 친구</string>
    <string name="str_sns_friend">SNS 친구</string>
    <string name="str_contact_friend">주소록 친구</string>
    <string name="str_show_detail">자세히  보기</string>
    <string name="str_follower">팔로워</string>
    <string name="str_following">팔로잉</string>
    <string name="str_pg_point">PG POINT</string>
    <string name="str_find_facebook_friend">플레이그린 앱을 사용하는\n페이스북 친구를 찾아보세요</string>
    <string name="str_connect_facebook">페이스북에 연결</string>
    <string name="str_find_contact_friend">플레이그린 앱을 사용하는\n내 주소록의 친구를 찾아보세요</string>
    <string name="str_not_exist_contact_friend">주소록 친구가 없습니다.</string>
    <string name="str_connect_contact">주소록 친구</string>
    <string name="str_connect_contact_message">주소록 친구</string>
    <string name="str_friend_count">%d명의 친구</string>
    <string name="str_follow_all">모두 팔로우</string>
    <string name="str_more">...더보기</string>
    <string name="str_timeline">TIME LINE</string>
    <string name="str_mypage">마이페이지</string>
    <string name="str_timeline_guide_text">전세계 PlayGreener들의\n일상을 공유하는 곳입니다</string>
    <string name="str_pg21_guide_text">건강한 지구를 만드는 습관! 21일 동안\n플레이그린하고 특별한 선물을 받으세요!</string>
    <string name="str_best_pick_guide_text">최고의\nPlayGreener들을\n만나보세요</string>
    <string name="str_pgnow_guide_text">플레이그린의\n다양한 소식을\n놓치지 마세요!</string>
    <string name="str_never_see">다시 보지 않기</string>
    <string name="str_earth">EARTH</string>
    <string name="str_friends">FRIENDS</string>
    <string name="str_like_count">%d명이 좋아합니다</string>
    <string name="str_empty_friend_message">팔로우 친구가 없습니다.\n새로운 플레이그린 친구를 찾아보세요</string>
    <string name="str_find_friend">친구 찾기</string>
    <string name="str_comment">댓글</string>
    <string name="str_comment_empty">댓글이 없습니다.</string>
    <string name="str_like">좋아요</string>
    <string name="str_report">신고하기</string>
    <string name="str_delete">삭제하기</string>
    <string name="str_copy_url">URL 복사하기</string>
    <string name="str_facebook">FACEBOOK</string>
    <string name="str_instagram">INSTAGRAM</string>
    <string name="str_kakaostory">KAKAOSTORY</string>
    <string name="str_input">입력</string>
    <string name="str_hint_comment">댓글을 입력하세요...</string>
    <string name="str_toast_input_comment">댓글을 입력해주세요</string>
    <string name="str_toast_regist_comment_complete">댓글을 입력하였습니다</string>
    <string name="title_activity_detail_user_info">DetailUserInfoAct</string>
    <string name="str_report_first">플레이그린과 상관없는 게시물입니다</string>
    <string name="str_report_second">음란성/광고성 게시물입니다.</string>
    <string name="str_report_third">기타</string>
    <string name="str_toast_input_report">글을 입력해주세요</string>
    <string name="str_toast_report_complete">해당 게시물을 신고하였습니다</string>
    <string name="str_title_playgreen_21">#PLAYGREEN21</string>
    <string name="str_title_playgreen">#PLAYGREEN</string>
    <string name="str_playgreen_21">#플레이그린21</string>
    <string name="str_21">21</string>
    <string name="str_pg21_sub_title">지구를 위한 착한 습관 만들기</string>
    <string name="str_pg21_progress" formatted="false">%s님은 현재까지%s 플레이그린 중!</string>
    <string name="str_pg21_day">#%s일.</string>
    <string name="str_pg21_today_mission">오늘의 미션</string>
    <string name="str_pg21_today_mission_warning_message">미션은 하루에 한번씩만 참여하실 수 있습니다.</string>
    <string name="str_pg21_reward_message">21일간의 미션을 완료하면\n지구가 보내는 선물\nEarth Box를 드립니다</string>
    <string name="str_pg21_mission_complete_message">짝짝짝! 축하합니다</string>
    <string name="str_pg21_mission_complete_message_02">드디어 21일 미션을 완료하셨군요!</string>
    <string name="str_pg21_earth_box_request">EARCH BOX 응모하기</string>
    <string name="str_earth_box_description">EARTH BOX에 당첨된 분에게\n개별 연락을 드립니다</string>
    <string name="str_earth_box_description_02">당첨 확인을 위해 정확한 연락처를 입력해주세요</string>
    <string name="str_hint_input_contact">연락처 입력</string>
    <string name="str_toast_input_name">이름을 입력해주세요</string>
    <string name="str_toast_input_contact">연락처를 입력해주세요</string>
    <string name="str_subscription">응모하기</string>
    <string name="str_subscription_complete">응모완료</string>
    <string name="str_playgreen_ko">플레이그린</string>
    <string name="str_my_playgreen">나의 플레이그린</string>
    <string name="str_21days_mission_complete">21일간의 미션 완료!</string>
    <string name="str_pg21_share_message">미션 완료 소식을 친구들에게 공유하세요\nSNS 공유 시 PG POINT가 지급됩니다!</string>
    <string name="str_today_mission_select">오늘의 미션 선택</string>
    <string name="str_today_mission_description">오늘의 미션을 선택하여 사진을 등록해주세요.</string>
    <string name="str_mission_array_00">미션\n만들기</string>
    <string name="str_mission_array_01">걷기\n계단오르기</string>
    <string name="str_mission_array_02">양치컵\n사용하기</string>
    <string name="str_mission_array_03">텀블러\n사용하기</string>
    <string name="str_mission_array_04">자전거\n타기</string>
    <string name="str_mission_array_05">캔들\n다이닝하기</string>
    <string name="str_mission_array_06">에코백\n메기</string>
    <string name="str_mission_array_07">손수건\n사용하기</string>
    <string name="str_mission_array_08">도시락\n싸기</string>
    <string name="str_mission_array_09">가드닝\n하기</string>
    <string name="str_mission_array_10">재활용\n하기</string>
    <string name="str_mission_array_11">대중교통\n이용하기</string>
    <string name="str_make_my_mission">나만의 미션 만들기</string>
    <string name="str_hint_make_my_mission">나만의 미션명을 입력하세요(10자 이하)</string>
    <string name="str_toast_input_my_mission">나만의 미션명을 입력해주세요</string>
    <string name="str_toast_input_under_10">10글자 이하로 작성해주세요</string>
    <string name="str_highlight_area">하이라이트 영역</string>
    <string name="str_highlight_area_description">하이라이트 영역을 선택해주세요\n메인 화면에 해당 영역이 보여지게 됩니다</string>
    <string name="str_challenge">도전!</string>
    <string name="str_super_greener">SUPER GREENER</string>
    <string name="str_super_greener_description">꾸준히 미션을 수행해\nSUPER GREENER가 되세요</string>
    <string name="str_super_greener_description2">Super Greener 1위가 되신 분께는\n이니스프리에서 준비한 특별한 선물을 드립니다</string>
    <string name="str_super_greener_end">\&apos;도전! SUPER GREENER\&apos;\n미션 참여 기간이 종료되었습니다</string>
    <string name="str_super_greener_end_description">짝짝짝! 그 동안 수고하셨습니다\n\n새로운 마음으로 #PLAYGREEN21에 참여해,\n새롭게 준비한 Earth Box의 주인공이 되세요!</string>
    <string name="str_super_greener_end_description2">(두 번째 Earth Box를 확인해 보세요!)</string>
    <string name="str_what_is_pg_point">PG POINT란?</string>
    <string name="str_innisfree_special_membership">이니스프리의 특별한 멤버쉽</string>
    <string name="str_pg_point_description">적립한 PG POINT로 어스박스 구매,\n클래스 참여, 페스티벌 참여, 행키시네마 참여 등\n다양한 혜택을 받을 수 있습니다.</string>
    <string name="str_pg_point_save_way">PG POINT 적립방법</string>
    <string name="str_pg_point_how_to_use">PG POINT 사용방법</string>
    <string name="str_pg_point_delete_info">PG POINT 소멸안내</string>
    <string name="str_pg_point_delete_info_description">
    1. 타인의 ID 도용 등 부정한 방법으로 포인트를 획득한 경우\n관리자에 의해 해당 포인트가 삭제될 수 있습니다.
    \n\n2. 불량 회원 적발 시 포인트의 일부가 차감 될 수 있습니다.
    \n\n3. 회원 탈퇴 시 모든 포인트가 소멸합니다.</string>
    <string name="str_pw_rule_description">8~16자리의 영문 대 소문자, 숫자, 특주문자 중 최소 2가지\n이상을 사용하세요</string>
    <string name="str_confirm_before_leave">탈퇴하기 전에 꼭 확인하세요.</string>
    <string name="str_leave_member_notice">탈퇴 시, 수집한 개인 정보는 지체없이 파기되며 플레이그린\n계정은 삭제되어 해당 계정으로는 서비스 접근이\n불가능합니다. 등록한 컨텐츠에 대한 모든 정보는 삭제되어\n복구 할 수 없으며, 삭제까지는 시간이 소요될 수 있습니다.</string>
    <string name="str_leave_member_agree">플레이그린 계정을 삭제하고 탈퇴합니다.</string>
</resources>