<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_188"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/c_ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <kr.innisfree.playgreen.common.view.NanumGothicBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:gravity="center"
            android:minHeight="@dimen/dp_45"
            android:text="@string/str_super_greener_end"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/dp_16"/>

        <kr.innisfree.playgreen.common.view.NanumGothicTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/str_super_greener_end_description"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/dp_13"/>

        <kr.innisfree.playgreen.common.view.NanumGothicTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:gravity="center"
            android:text="@string/str_super_greener_end_description2"
            android:textColor="@color/c_999999"
            android:textSize="@dimen/dp_13"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/c_e1e1e1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_66"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/c_f8f8f8"
        android:gravity="center">

        <kr.innisfree.playgreen.common.view.NanumGothicBoldTextView
            android:id="@+id/txt_confirm"
            android:layout_width="@dimen/dp_107"
            android:layout_height="@dimen/dp_36"
            android:background="@drawable/btn_round2"
            android:gravity="center"
            android:text="@string/str_confirm"
            android:textColor="@color/c_4b9b50"
            android:textSize="@dimen/dp_14"/>

    </LinearLayout>


</LinearLayout>
