<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/c_ffffff"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <kr.innisfree.playgreen.common.view.NanumGothicTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    android:minHeight="@dimen/dp_20"
                    android:text="@string/str_innisfree_special_membership"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/dp_13"/>

                <kr.innisfree.playgreen.common.view.InnisfreeGothicBoldTextView
                    android:layout_width="@dimen/dp_210"
                    android:layout_height="@dimen/dp_36"
                    android:layout_marginTop="@dimen/dp_4"
                    android:background="@drawable/img_round2"
                    android:gravity="center"
                    android:text="@string/str_what_is_pg_point"
                    android:textColor="@color/c_4b9b50"
                    android:textSize="@dimen/dp_18"/>

                <View
                    android:layout_width="@dimen/dp_220"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@color/c_eeeeee"></View>

                <kr.innisfree.playgreen.common.view.NanumGothicTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:minHeight="@dimen/dp_60"
                    android:text="@string/str_pg_point_description"
                    android:textColor="@color/c_666666"
                    android:textSize="@dimen/dp_12"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_marginTop="@dimen/dp_24"
                    android:background="@color/c_d2d2d2"></View>

            </LinearLayout>

            <kr.innisfree.playgreen.common.view.NanumGothicBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_36"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_24"
                android:gravity="center_vertical"
                android:text="@string/str_pg_point_save_way"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/dp_13"/>

            <LinearLayout
                android:id="@+id/layout_point_gain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/bg_box"
                android:orientation="vertical">


            </LinearLayout>

            <kr.innisfree.playgreen.common.view.NanumGothicBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_36"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_24"
                android:gravity="center_vertical"
                android:text="@string/str_pg_point_how_to_use"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/dp_13"/>

            <LinearLayout
                android:id="@+id/layout_point_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/bg_box"
                android:orientation="vertical">

            </LinearLayout>

            <kr.innisfree.playgreen.common.view.NanumGothicBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_36"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_24"
                android:gravity="center_vertical"
                android:text="@string/str_pg_point_delete_info"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/dp_13"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@color/c_d2d2d2"/>

            <kr.innisfree.playgreen.common.view.NanumGothicTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_14"
                android:layout_marginLeft="@dimen/dp_15"
                android:lineSpacingExtra="@dimen/dp_6"
                android:gravity="center_vertical"
                android:text="@string/str_pg_point_delete_info_description"
                android:textColor="@color/c_666666"
                android:layout_marginBottom="@dimen/dp_40"
                android:textSize="@dimen/dp_12"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>