<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/c_69b06c"
        android:gravity="center_vertical"
        android:minHeight="@dimen/titlebar_height"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/btn_back1"
        app:titleTextColor="@color/c_ffffff">

        <kr.innisfree.playgreen.common.view.InnisfreeGothicBoldTextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/dp_56"
            android:gravity="center"
            android:textColor="@color/c_ffffff"
            android:textSize="@dimen/dp_20"/>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <kr.innisfree.playgreen.common.view.NanumGothicEditView
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_edit_common"
                android:hint="@string/str_id"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/c_333333"
                android:textColorHint="@color/c_c9c9c9"
                android:textSize="@dimen/dp_14"/>

            <kr.innisfree.playgreen.common.view.NanumGothicEditView
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/bg_edit_common"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/c_333333"
                android:textColorHint="@color/c_c9c9c9"
                android:textSize="@dimen/dp_14"/>

            <kr.innisfree.playgreen.common.view.NanumGothicTextView
                android:id="@+id/txt_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_warning"
                android:drawablePadding="@dimen/dp_6"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_11"
                android:paddingBottom="@dimen/dp_12"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/str_pw_rule_description"
                android:textColor="@color/c_e9552c"
                android:textSize="@dimen/dp_12"
                android:visibility="gone"/>

            <kr.innisfree.playgreen.common.view.NanumGothicBoldTextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/btn_color_common"
                android:gravity="center"
                android:text="@string/str_login"
                android:textColor="@color/c_ffffff"
                android:textSize="@dimen/dp_16"/>

            <kr.innisfree.playgreen.common.view.NanumGothicTextView
                android:id="@+id/txt_find_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/str_find_password"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/dp_12"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_27"
                android:background="@color/c_d2d2d2"
                />


            <kr.innisfree.playgreen.common.view.NanumGothicBoldTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center"
                android:text="@string/str_join_text"
                android:textColor="@color/c_666666"
                android:textSize="@dimen/dp_12"/>


            <kr.innisfree.playgreen.common.view.NanumGothicBoldTextView
                android:id="@+id/txt_join"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_26"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/btn_round1"
                android:gravity="center"
                android:text="@string/str_join"
                android:textColor="@color/c_4b9b50"
                android:textSize="@dimen/dp_13"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>
    </FrameLayout>


</LinearLayout>